Update Readme for new installation/dependency management with Java 11+. Remove jgo commandline instruction; likely to be deprecated soon.